Added favourites import/export to release notes document. Closes #19

--- a/arbil/release_notes.txt
+++ b/arbil/release_notes.txt
@@ -17,6 +17,8 @@ of the description.
 
 The following functionality has been added to Arbil:
 
+- FAVOURITES: Favourites can be now be imported and exported. (#19)
+
 ** CHANGES **
 
 These parts of the Arbil functionality have changed:
