--- a/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -71,7 +71,15 @@ EDIT\ ALL\ METADATA=Edit all Metadata
 
 VIEW\ SELECTED=View Selected
 
-REMOVE\ SELECTED\ ROWS=Remove Selected Rows
+REMOVE\ SELECTED\ ROWS=Remove Selected Rows From Table
+
+REMOVE\ SELECTED\ NODES\ FROM\ PARENT=Delete Selected Nodes from Parent
+
+JUMP\ TO\ IN\ TREE=Jump to in Tree
+
+SHOW\ CONTEXT=Show Context
+
+SELECT\ MATCHING\ ROWS=Select Matching Rows
 
 VIEW\ SELECTED\ ROWS=View Selected Rows
 
