Added resource properties for menu items in TableHeaderContextMenu #i18n

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Menus.properties
@@ -262,3 +262,17 @@ SELECT\ RESOURCE\ FILE=Select Resource File
 BROWSE\ FOR\ RESOURCE\ FILE=Browse For Resource File
 ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)=About to replace all values in column \\"{0}\\"\\nwith the value \\"{1}\\"\\n(<multiple values> will not be affected)
 LOGOUT\ ERROR=Logout Error
+
+SAVE\ CURRENT\ COLUMN\ VIEW=Save Current Column View
+HIDE\ COLUMN=Hide Column
+ALL\ COLUMNS=All columns
+THIS\ COLUMN=This column ({0})
+DELETE\ FIELD\ FROM\ ALL\ NODES=Delete field from all nodes
+FIXED\ COLUMN\ SIZE=Fixed column size
+MAKE\ COLUMN\ FIT\ CONTENTS=Make column fit contents
+MAKE\ ALL\ COLUMNS\ FIT\ CONTENTS=Make all columns fit contents
+MAKE\ ALL\ COLUMNS\ THE\ SIZE\ OF=Make all columns the size of "{0}"
+COPY\ TABLE\ FOR\ WEBSITE=Copy Table For Website
+COLUMN\ VIEW\ FOR\ THIS\ TABLE=Column View for this Table
+LIMIT\ VIEW\ TO\ CURRENT\ COLUMNS=Limit View to Current Columns
+EDIT\ THIS\ COLUMN\ VIEW=Edit this Column View
