Fixed i18n resource property mismatch

--- a/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
+++ b/arbil-localisation/src/main/resources/nl/mpi/arbil/localisation/Widgets.properties
@@ -17,7 +17,7 @@ REMOTE\ CORPUS=Remote corpus
 LOCAL\ CORPUS=Local corpus
 WARNING=WARNING
 FILES=Files
-THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?",\ "SAVE\ TO\ DISK?=This action will save all pending changes on {0} to disk. Continue?
+THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?=This action will save all pending changes on {0} to disk. Continue?
 REMEMBER\ MY\ CHOICE=Remember my choice
 \ FORMATTED=\ formatted
 VIEW\ IMDI\ XML=View IMDI XML
