--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -10,7 +10,7 @@ IMPORT\ BRANCH=Direction g\u00c3\u00a9n\u00c3\u00a9rale d\'importation=
 
 IMPORT\ CSV=Import CSV=
 
-EXPORT=Das Exporter=
+EXPORT=Exportieren
 
 REMOVE\ LINK\ TO\ DIRECTORY=Supprimer le lien vers le r\u00c3\u00a9pertoire=
 
@@ -30,107 +30,108 @@ ADD\ TO\ TREE\ ROOT=Ajouter au Souche de l\'Arbre
 
 ADD\ REMOTE\ LOCATION=Ajouter un emplacement distant
 
-HISTORY=Histoire
+HISTORY=Chronik
 
 CHECK\ XML\ CONFORMANCE=V\u00c3\u00a9rifiez XML Conformance
 
-REMOVE\ FROM\ FAVOURITES\ LIST=Retirer de la liste des favoris
+REMOVE\ FROM\ FAVOURITES\ LIST=Aus der Favoritenliste entfernen
 
-ADD\ TO\ FAVOURITES\ LIST=Ajouter \u00c3\u00a9 la liste de favoris
+ADD\ TO\ FAVOURITES\ LIST=Zur Favoritenliste hinzuf\u00fc
 
-ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Enfants Favoris Ajouter \u00c3\u00a9 la liste
+ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Kinder zur Favoritenliste hinzuf\u00fcgen
 
 ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Ajouter Ressources en vrac de favoris
 
-ADD\ FROM\ FAVOURITES=Ajouter des favoris
+ADD\ FROM\ FAVOURITES=Aus den Favoriten hinzuf\u00fcgen
 
-ADD=Ajouter
+ADD=Hinzuf\u00fcgen
 
 RELOAD=Recharger
 
-SEARCH=Rechercher
+SEARCH=Suchen
 
-IMPORT\ TO\ LOCAL\ CORPUS=Importer \u00c3\u00a9 Corpus locale
+IMPORT\ TO\ LOCAL\ CORPUS=In den lokalen Corpus importieren
 
-SEARCH\ REMOTE\ CORPUS=Recherche \u00c3\u00a9 distance Corpus
+SEARCH\ REMOTE\ CORPUS=Im mobilen Corpus suchen
 
-NO\ NODE\ SELECTED=Aucun n\u00c3\u00a9ud s\u00c3\u00a9lectionn\u00c3\u00a9
+NO\ NODE\ SELECTED=Kein Knotenpunkt ausgew\u00e4hlt
 
-DELETE=Effacer
 
-VIEW/EDIT\ SELECTED=Voir / Modifier la s\u00c3\u00a9lection
+DELETE=L\u00f6schen
 
-VIEW\ IN\ LONG\ FIELD\ EDITOR=Voir en Longfield Editor
+VIEW/EDIT\ SELECTED= Auswahl Ansicht / Bearbeiten 
 
-EDIT\ IN\ LONG\ FIELD\ EDITOR=Modifier dans Longfield Editor
+VIEW\ IN\ LONG\ FIELD\ EDITOR=Ansicht im Gro\u00df-Editor
 
-VIEW\ ALL\ METADATA=Voir tous m\u00c3\u00a9tadonn\u00c3\u00a9es
+EDIT\ IN\ LONG\ FIELD\ EDITOR=Im Gro\u00df-Editor bearbeiten
 
-EDIT\ ALL\ METADATA=Modifier les m\u00c3\u00a9tadonn\u00c3\u00a9es
+VIEW\ ALL\ METADATA=Alle Metadata ansehen
 
-VIEW\ SELECTED=Afficher la s\u00c3\u00a9lection
+EDIT\ ALL\ METADATA=Alle Metadata bearbeiten
 
-REMOVE\ SELECTED\ ROWS=Supprimer des lignes s\u00c3\u00a9lectionn\u00c3\u00a9es
+VIEW\ SELECTED= Ausgew\u00e4hlte ansehen
 
-VIEW\ SELECTED\ ROWS=Voir Lignes s\u00c3\u00a9lectionn\u00c3\u00a9es
+REMOVE\ SELECTED\ ROWS=Ausgew\u00e4hlte Zeilen l\u00f6schen
+
+VIEW\ SELECTED\ ROWS= Ausgew\u00e4hlte Zeilen ansehen
 
 CLEAR\ CELL\ HIGHLIGHT=Mettez en surbrillance \u00c3\u00a9 cellules claires
 
 HIGHLIGHT\ MATCHING\ CELLS=Les cellules en \u00c3\u00a9vidence des correspondants
 
-COPY\ CELL\ TO\ WHOLE\ COLUMN=Copiez la cellule \u00c3\u00a9 la colonne enti\u00c3\u00a9re=
+COPY\ CELL\ TO\ WHOLE\ COLUMN=Zelle zu ganzer Spalte kopieren
 
-CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD=Impossible de copier ce type de champ=
+CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD= Kopieren dieser Art von Feld nicht m\u00f6glich
 
-REVERT\ SELECTED\ FIELDS=Revenir Champs s\u00c3\u00a9lectionn\u00c3\u00a9s=
+REVERT\ SELECTED\ FIELDS=Auswahl der Feld r\u00fcckg\u00e4ngig machen
 
-DELETE\ FIELD=Supprimer le champ=
+DELETE\ FIELD= Feld l\u00f6schen
 
-ERROR\ DELETING\ FIELDS=\ \ VOIR LA \ LOG \ DOSSIER \ VIA \ LE \ HELP \ MENU \ DE \ PLUS D\'INFORMATIONS \.=Error deleting fields= check the log file via the help menu for more information.
+ERROR\ DELETING\ FIELDS=Fehler Felder l\u00f6schen Log Datei f\u00fcr mehr Informationen mit dem Hilfe-men\u00fc \u00fcberpr\u00fcfen 
 
-DELETE\ MULTIFIELD=Supprimer le champ multi=
+DELETE\ MULTIFIELD=Multi-Feld l\u00f6schen
 
-SHOW\ CHILD\ NODES=Voir n\u00c3\u00a9uds enfants=
+SHOW\ CHILD\ NODES=Kinder Knotenpunkte anzeigen
 
-HIDE\ SELECTED\ COLUMNS=Masquer Colonnes s\u00c3\u00a9lectionn\u00c3\u00a9es=
+HIDE\ SELECTED\ COLUMNS=Spalten verdecken
 
-OPEN\ IN\ LONG\ FIELD\ EDITOR=Open in Longfield Editor=
+OPEN\ IN\ LONG\ FIELD\ EDITOR= Im Gro\u00df-Editor \u00f6ffnen
 
-DELETE\ {0}=Supprimer {0}=
+DELETE\ {0}=L\u00f6schen
 
-DELETE\ ATTRIBUTE\ {0}=Supprimer l\'attribut {0}=
+DELETE\ ATTRIBUTE\ {0}=Das Attribut l\u00f6schen {0}=
 
-ARBIL=Arbil=
+ARBIL=Arbil
 
-SAVE\ CHANGES\ BEFORE\ EXITING?=Enregistrer les modifications avant de quitter?=
+SAVE\ CHANGES\ BEFORE\ EXITING?=\u00c4nderungen vor dem Schlie\u00dfen speichern? 
 
-SHORT\ CUT\ KEYS=Touches de raccourci=
+SHORT\ CUT\ KEYS= Tastenkuerzel
 
-NO\ UPDATES\ FOUND=\ ACTUEL \ VERSION \ est \ {0}=No updates found= current version is {0}
+NO\ UPDATES\ FOUND=Kein Update gefunden, aktuelle Version ist {0}
 
-CHECK\ FOR\ UPDATES=Check for Updates=
+CHECK\ FOR\ UPDATES=Nach Updates suchen
 
-VIEW\ ERROR\ LOG=Afficher le journal d\'erreur
+VIEW\ ERROR\ LOG=Liste mit Fehlermeldungen anzeigen
 
-ARBIL\ FORUM\ (WEBSITE)=Arbil Forum (Site Web)
+ARBIL\ FORUM\ (WEBSITE)=Arbil Forum (Website)
 
-YES=oui
+YES=Ja
 
-RUN\ SETUP\ WIZARD=Ex\u00c3\u00a9cuter l\'Assistant Configuration
+RUN\ SETUP\ WIZARD=Ausf\u00fchren\Installieren\......
 
-ABOUT=Sur
+ABOUT=\u00dcber
 
-HELP=Aider
+HELP=Hilfe
 
-CLOSE\ WINDOWS=Fermer les fen\u00c3\u00a9tres
+CLOSE\ WINDOWS=Fenster schlie\u00dfen
 
-CLOSE\ ALL\ WINDOWS?=Fermez toutes les fen\u00c3\u00a9tres?
+CLOSE\ ALL\ WINDOWS?=Alle Fenster schlie\u00dfen?
 
-CLOSE\ ALL\ WINDOWS=Fermez toutes les fen\u00c3\u00a9tres
+CLOSE\ ALL\ WINDOWS=Alle Fenster schlie\u00dfen
 
-RESET\ WINDOWS=Reset Windows
+RESET\ WINDOWS=Fenster wiederherstellen
 
-RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=R\u00c3\u00a9initialiser toutes les fen\u00c3\u00a9tres \u00c3\u00a9 la taille et l\'emplacement par d\u00c3\u00a9faut?
+RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=Alle Fenster in Default GrR\u00c3\u00a9initialiser toutes les fen\u00c3\u00a9tres \u00c3\u00a9 la taille et l\'emplacement par d\u00c3\u00a9faut?
 
 RESET\ WINDOW\ LOCATIONS=R\u00c3\u00a9initialiser emplacement des fen\u00c3\u00a9tres
 
