--- a/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Menus_de.properties
@@ -4,43 +4,43 @@ INSERT\ MANUAL\ RESOURCE\ LOCATION=Ins\u00c3\u00a9rez Lieu Manuel de ressources=
 
 RE-IMPORT\ THIS\ BRANCH=Re-Import cette direction=
 
-RE-IMPORT\ THIS\ SESSION=R\u00c3\u00a9-importer cette session=
+RE-IMPORT\ THIS\ SESSION=Diese Sitzung wieder einf\u00fchren
 
-IMPORT\ BRANCH=Direction g\u00c3\u00a9n\u00c3\u00a9rale d\'importation=
+IMPORT\ BRANCH=Direction g\u00c3\u00a9n\u00c3\u00a9rale importieren=
 
-IMPORT\ CSV=Import CSV=
+IMPORT\ CSV= CSV importieren
 
 EXPORT=Exportieren
 
-REMOVE\ LINK\ TO\ DIRECTORY=Supprimer le lien vers le r\u00c3\u00a9pertoire=
+REMOVE\ LINK\ TO\ DIRECTORY= Link zum Verzeichnis l\u00f6schen=
 
-SHOW\ HIDDEN\ FILES=Afficher les fichiers cach\u00c3\u00a9s
+SHOW\ HIDDEN\ FILES=Verdeckte ordner anzeigen
 
-ADD\ WORKING\ DIRECTORY=Ajouter le r\u00c3\u00a9pertoire de travail
+ADD\ WORKING\ DIRECTORY=Arbeitsverzeichnis hinzuf\u00fcgen
 
-REMOVE\ REMOTE\ LOCATION=Enlever localisation \u00c3\u00a9 distance
+REMOVE\ REMOTE\ LOCATION=Online Speicherplatz entfernen
 
-ADD\ DEFAULT\ LOCATIONS=Ajout d\'emplacements par d\u00c3\u00a9faut
+ADD\ DEFAULT\ LOCATIONS=Standardspeicherort hinzuf\u00fcgen
 
-THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN=Les emplacements par d\u00c3\u00a9faut existe d\u00c3\u00a9j\u00c3\u00a9 et ne sera pas ajout\u00c3\u00a9 \u00c3\u00a9 nouveau
+THE\ DEFAULT\ LOCATIONS\ ALREADY\ EXISTS\ AND\ WILL\ NOT\ BE\ ADDED\ AGAIN= Der Standardspeicherort existiert bereits und wird nicht nochmals hinzugef\u00fcgt
 
-ADD\ DEFAULT\ REMOTE\ LOCATIONS=Ajout d\'emplacements par d\u00c3\u00a9faut \u00c3\u00a9 distance
+ADD\ DEFAULT\ REMOTE\ LOCATIONS=Standard online-Speicherort hinzuf\u00fcgen.
 
-ADD\ TO\ TREE\ ROOT=Ajouter au Souche de l\'Arbre
+ADD\ TO\ TREE\ ROOT=Zur Wurzel des Baums hinzuf\u00fcgeb
 
-ADD\ REMOTE\ LOCATION=Ajouter un emplacement distant
+ADD\ REMOTE\ LOCATION= Online Speicherort hinzuf\u00fcgen
 
-HISTORY=Chronik
+HISTORY=Verlauf
 
-CHECK\ XML\ CONFORMANCE=V\u00c3\u00a9rifiez XML Conformance
+CHECK\ XML\ CONFORMANCE= XML Anpassung \u00fcberfpr\u00fcfen
 
 REMOVE\ FROM\ FAVOURITES\ LIST=Aus der Favoritenliste entfernen
 
-ADD\ TO\ FAVOURITES\ LIST=Zur Favoritenliste hinzuf\u00fc
+ADD\ TO\ FAVOURITES\ LIST=Zur Favoritenliste hinzuf\u00fcgen
 
 ADD\ CHILDREN\ TO\ FAVOURITES\ LIST=Kinder zur Favoritenliste hinzuf\u00fcgen
 
-ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES=Ajouter Ressources en vrac de favoris
+ADD\ BULK\ RESOURCES\ VIA\ FAVOURITES= Ungebundene Resourcen zu Favoriten hinzuf\u00fcgen
 
 ADD\ FROM\ FAVOURITES=Aus den Favoriten hinzuf\u00fcgen
 
@@ -50,9 +50,9 @@ RELOAD=Recharger
 
 SEARCH=Suchen
 
-IMPORT\ TO\ LOCAL\ CORPUS=In den lokalen Corpus importieren
+IMPORT\ TO\ LOCAL\ CORPUS=In das lokale Corpus importieren
 
-SEARCH\ REMOTE\ CORPUS=Im mobilen Corpus suchen
+SEARCH\ REMOTE\ CORPUS=Im  Corpus suchen
 
 NO\ NODE\ SELECTED=Kein Knotenpunkt ausgew\u00e4hlt
 
@@ -75,15 +75,15 @@ REMOVE\ SELECTED\ ROWS=Ausgew\u00e4hlte Zeilen l\u00f6schen
 
 VIEW\ SELECTED\ ROWS= Ausgew\u00e4hlte Zeilen ansehen
 
-CLEAR\ CELL\ HIGHLIGHT=Mettez en surbrillance \u00c3\u00a9 cellules claires
+CLEAR\ CELL\ HIGHLIGHT= Leere Zellen hervorheben
 
-HIGHLIGHT\ MATCHING\ CELLS=Les cellules en \u00c3\u00a9vidence des correspondants
+HIGHLIGHT\ MATCHING\ CELLS=Passende Zellen hervorheben
 
 COPY\ CELL\ TO\ WHOLE\ COLUMN=Zelle zu ganzer Spalte kopieren
 
 CANNOT\ COPY\ THIS\ TYPE\ OF\ FIELD= Kopieren dieser Art von Feld nicht m\u00f6glich
 
-REVERT\ SELECTED\ FIELDS=Auswahl der Feld r\u00fcckg\u00e4ngig machen
+REVERT\ SELECTED\ FIELDS=Auswahl der Felder r\u00fcckg\u00e4ngig machen
 
 DELETE\ FIELD= Feld l\u00f6schen
 
@@ -131,126 +131,126 @@ CLOSE\ ALL\ WINDOWS=Alle Fenster schlie\u00dfen
 
 RESET\ WINDOWS=Fenster wiederherstellen
 
-RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=Alle Fenster in Default GrR\u00c3\u00a9initialiser toutes les fen\u00c3\u00a9tres \u00c3\u00a9 la taille et l\'emplacement par d\u00c3\u00a9faut?
+RESET\ ALL\ WINDOWS\ TO\ DEFAULT\ SIZE\ AND\ LOCATION?=Alle Fenster auf Standardgr\u00f6\u00dfe und Speicher-ort zur\u00fccksetzen
 
-RESET\ WINDOW\ LOCATIONS=R\u00c3\u00a9initialiser emplacement des fen\u00c3\u00a9tres
+RESET\ WINDOW\ LOCATIONS=Speicherorte der Fenster ver\u00e4ndern
 
-WINDOW=Fen\u00c3\u00a9tre
+WINDOW=Fenster
 
-PLUGINLIST\ NOT\ FOUND=Liste plugin not found
+PLUGINLIST\ NOT\ FOUND=Plug-in Liste nicht gefunden
 
-PLUGIN\ ERROR=Erreur du plugin
+PLUGIN\ ERROR=Fehler beim Plug-in
 
-COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Impossible de charger le plugin: {0} \ \ n
+COULD\ NOT\ LOAD\ PLUGIN\:\ {0}=Nicht m\u00f6glich Plug-in zu laden: {0} \ \ n
 
-EDIT\ COLUMN\ VIEWS=Modifier Vues colonne
+EDIT\ COLUMN\ VIEWS=Spaltenansicht bearbeiten
 
-COLUMN\ VIEW\ FOR\ NEW\ TABLES=Voir colonne pour les nouvelles tables
+COLUMN\ VIEW\ FOR\ NEW\ TABLES= Spaltenansicht f\u00fcr neue Tabellen
 
-SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Afficher la langue dans la colonne Nom
+SHOW\ LANGUAGE\ IN\ COLUMN\ NAME=Sprache im Spaltennamen anzeigen
 
-TRACK\ TABLE\ SELECTION\ IN\ TREE=Suivre le tableau de s\u00c3\u00a9lection dans l\'arbre
+TRACK\ TABLE\ SELECTION\ IN\ TREE=Tabellenauswahl im Baum nachvollziehen
 
-THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.="Cette option v\u00c3\u00a9rifie tous les fichiers de m\u00c3\u00a9tadonn\u00c3\u00a9es locaux pour la conformit\u00c3\u00a9 \u00c3\u00a9 chaque fois qu\'ils sont charg\u00c3\u00a9s XML. Si le fichier de m\u00c3\u00a9tadonn\u00c3\u00a9es ne valide pas par rapport au sch\u00c3\u00a9ma= il sera soulign\u00c3\u00a9 en rouge dans l\'arbre."
+THIS\ OPTION\ CHECKS\ ALL\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE\ EVERY\ TIME\ THEY\ ARE\ LOADED.\ IF\ THE\ METADATA\ FILE\ DOES\ NOT\ VALIDATE\ AGAINST\ THE\ SCHEMA\ IT\ WILL\ BE\ HIGHLIGHTED\ RED\ IN\ THE\ TREE.="Diese Option \u00fcberpr\u00fcft alle lokalen Meta-data-Dateien f\u00fcr XML Anpassungen bei jedem Mal Laden. Wenn das Meta-dataformat nicht mit dem Schema \u00fcbereinkommt, wird es in Rot im Baum angezeigt. 
 
-ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE=Toujours v\u00c3\u00a9rifier les fichiers de m\u00c3\u00a9tadonn\u00c3\u00a9es locaux pour la conformit\u00c3\u00a9 XML
+ALWAYS\ CHECK\ LOCAL\ METADATA\ FILES\ FOR\ XML\ CONFORMANCE= Lokale Metadata Dateien immer auf XML Konformit\u00e4t \u00fcberpr\u00fcfen. 
 
-THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.=La modification du param\u00c3\u00a9tre sera effective Lorsque Arbil est red\u00c3\u00a9marr\u00c3\u00a9.
+THE\ SETTING\ CHANGE\ WILL\ BE\ EFFECTIVE\ WHEN\ ARBIL\ IS\ RESTARTED.= Die Einstellungs\u00e4nderungen werden nach Neustart von Arbil vervollst\u00e4ndigt.
 
-THIS\ OPTION\ CHECKS\ THE\ SERVER\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES\ AND\ SHOWS\ ICONS\ ACCORDINGLY.=Cette option v\u00c3\u00a9rifie les autorisations du serveur de ressources distantes et les ic\u00c3\u00a9nes des spectacles en cons\u00c3\u00a9quence.
+THIS\ OPTION\ CHECKS\ THE\ SERVER\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES\ AND\ SHOWS\ ICONS\ ACCORDINGLY.=Diese Option kontrolliert die Zugrifferlaubnis des Servers auf Online Quellen und zeigt entsprechende Symbole an. 
 
-CHECK\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES=V\u00c3\u00a9rifiez les autorisations pour les ressources distantes
+CHECK\ PERMISSIONS\ FOR\ REMOTE\ RESOURCES=\u00dcberpr\u00fcfen der Zugrifferlaubnis f\u00fcr Online Quellen
 
-WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.=Lorsque vous ajoutez une nouvelle ressource pour une session cette option permet de copier le fichier dans le cache local plut\u00c3\u00a9t que d\'associer \u00c3\u00a9 son emplacement actuel. Cette option peut faire une diff\u00c3\u00a9rence \u00c3\u00a9 consid\u00c3\u00a9rer l\'utilisation du disque amor\u00c3\u00a9able si vous manipulez des fichiers volumineux.
+WHEN\ ADDING\ A\ NEW\ RESOURCE\ TO\ A\ SESSION\ THIS\ OPTIONS\ WILL\ COPY\ THE\ FILE\ INTO\ THE\ LOCAL\ CACHE\ RATHER\ THAN\ LINKING\ TO\ ITS\ CURRENT\ LOCATION.\ THIS\ OPTION\ CAN\ MAKE\ A\ CONSIDERABLE\ DIFFERENCE\ TO\ DISK\ USE\ IF\ YOU\ ARE\ HANDLING\ LARGE\ FILES.= Beim Hinzuf\u00fcgen neuer Data zu einer Sitzung, wird eine Kopie im lokalen Zwischenspeicher abgelegt, anstatt einen Link zum lokalen Speicherort zu erstellen. Diese Option verringert die Beansprachung der Festplatte betr\u00e4chtlich bei gro\u00dfen Dateien.
 
-COPY\ NEW\ RESOURCES\ INTO\ CACHE=Copiez nouvelle ressource dans le cache
+COPY\ NEW\ RESOURCES\ INTO\ CACHE=Neue Data in Zwischenspeicher kopieren
 
-CHECK\ FOR\ NEW\ VERSION\ ON\ START=V\u00c3\u00a9rifiez la nouvelle version au d\u00c3\u00a9marrage
+CHECK\ FOR\ NEW\ VERSION\ ON\ START=Beim Start bitte Vorhandensein neuer Versionen pr\u00fcfen
 
-SHOW\ STATUS\ BAR=Afficher la barre d\'\u00c3\u00a9tat
+SHOW\ STATUS\ BAR=Statusleiste anzeigen
 
-SHOW\ SELECTION\ PREVIEW=Afficher l\'aper\u00c3\u00a9u de s\u00c3\u00a9lection
+SHOW\ SELECTION\ PREVIEW=Vorschau der Auswahl anzeigen
 
-SAVE\ WINDOWS\ ON\ EXIT=\u00c3\u00a9conomisez sur Quitter Windows
+SAVE\ WINDOWS\ ON\ EXIT=Windows speichern beim Schlie\u00dfen
 
-RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Vocabulaires CurrentVersion Re-t\u00c3\u00a9l\u00c3\u00a9charger
+RE-DOWNLOAD\ CURRENT\ VOCABULARIES=Aktuellen Wortschatz wieder herunterlanden
 
-EDIT\ IMDI\ LANGUAGE\ LIST...=Modifier la liste Langue IMDI __...
+EDIT\ IMDI\ LANGUAGE\ LIST...=IMDI Sprachenliste bearbeiten...
 
-MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY=D\u00c3\u00a9placez R\u00c3\u00a9pertoire local de stockage Corpus
+MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY= Lokales Corpus Speicherverzeichnis verschieben
 
-MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY...=D\u00c3\u00a9placez R\u00c3\u00a9pertoire local de stockage Corpus ...
+MOVE\ LOCAL\ CORPUS\ STORAGE\ DIRECTORY...=Lokales Corpus Speicherverzeichnis verschieben ...
 
-LOCAL\ CORPUS\ STORAGE\ DIRECTORY=R\u00c3\u00a9pertoire de Corpus stockage local
+LOCAL\ CORPUS\ STORAGE\ DIRECTORY=Lokales Corpus Speicherverzeichnis
 
-TEMPLATES\ &\ PROFILES...=Mod\u00c3\u00a9les et profils ...
+TEMPLATES\ &\ PROFILES...=Modelle & Profile ...
 
-OPTIONS=Options de
+OPTIONS=Optionen
 
-REDO=Refaire
+REDO=Wiederherstellen/ Erneut Versuchen
 
-FIND/REPLACE=Rechercher / Remplacer
+FIND/REPLACE=Suchen / Ersetzen
 
-UNDO=Annuler
+UNDO=Abbrechen
 
-PASTE=Coller
+PASTE=Einf\u00fcgen
 
-COPY=Copier
+COPY=Kopieren
 
-EDIT=\u00c3\u00a9diter
+EDIT=Bearbeiten
 
-INVALID\ LOGOUT\ URL\:\ {0}=Invalid d\u00c3\u00a9connexion url: \ \ n {0}
+INVALID\ LOGOUT\ URL\:\ {0}=Ung\u00fcltiger Logout url: \ \ n {0}
 
 LOGOUTURL=LogoutUrl
 
-LOG\ OUT\ ({0})=D\u00c3\u00a9connexion ({0})
+LOG\ OUT\ ({0})= Ausloggen ({0})
 
-UNKNOWN\ USER=utilisateur inconnu
+UNKNOWN\ USER=Unbekannter User
 
-USERNAME=UserName
+USERNAME=Gebrauchername
 
-EXIT=Sortie
+EXIT=Verlassen
 
-IMPORT...=Importer ...
+IMPORT...=Importieren ...
 
-MODIFIED\ NODES=Les n\u00c3\u00a9uds modifi\u00c3\u00a9s
+MODIFIED\ NODES=Bearbeitete Knotenpunkte
 
-SHOW\ MODIFIED\ NODES=Voir n\u00c3\u00a9uds modifi\u00c3\u00a9s
+SHOW\ MODIFIED\ NODES=Bearbeitete Knotenpunkte anzeigen
 
-SAVE\ CHANGES=SaveChanges
+SAVE\ CHANGES=\u00c4nderungen speichern
 
-FILE=Embouteillage
+FILE=Datei
 
-PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.="Erreur d\'analyse= tout en essayant de lire le syst\u00c3\u00a9me de l\'aide! Consultez le journal des erreurs pour plus de d\u00c3\u00a9tails."
+PARSER\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.="Parser Fehler beim Lesen des Hilfe Systems! Siehe Fehlerprotokoll f\u00fcr Details."
 
-ERROR=Erreur
+ERROR=Fehler
 
-I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=I / O erreur en essayant de lire le syst\u00c3\u00a9me d\'aide! Consultez le journal des erreurs pour plus de d\u00c3\u00a9tails.
+I/O\ ERROR\ WHILE\ TRYING\ TO\ READ\ HELP\ SYSTEM!\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=I / O Fehler Beim Lesen des Hilfe Systems! Siehe Fehlerprotokoll f\u00fcr Details.
 
-ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=ArbilMenuBar n\u00c3\u00a9cessite ArbilWindowManager. Trouv\u00c3\u00a9 {0}
+ARBILMENUBAR\ REQUIRES\ ARBILWINDOWMANAGER.\ FOUND\ {0}=ArbilMenuBar erfordert ArbilWindowManager. Gefunden {0}
 
-ARBILMENUBAR\ REQUIRES\ ARBILTREEHELPER.\ FOUND\ {0}=ArbilMenuBar n\u00c3\u00a9cessite ArbilTreeHelper. Trouv\u00c3\u00a9 {0}
+ARBILMENUBAR\ REQUIRES\ ARBILTREEHELPER.\ FOUND\ {0}=ArbilMenuBar erfordert ArbilTreeHelper. Gefunden {0}
 
-EXPORT\ FAILED=L\'exportation a \u00c3\u00a9chou\u00c3\u00a9
+EXPORT\ FAILED= Export fehlgeschlagen.
 
-EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Exporter au format HTML \u00c3\u00a9chou\u00c3\u00a9. V\u00c3\u00a9rifiez le journal des erreurs pour plus de d\u00c3\u00a9tails.
+EXPORT\ TO\ HTML\ FAILED.\ CHECK\ THE\ ERROR\ LOG\ FOR\ DETAILS.=Export nach HTML fehlgeschlagen. Fehlerprotokoll \u00fcberpr\u00fcfen f\u00fcr mehr Details.
 
-EXPORT\ IMDI\ TO\ HTML=IMDI Exporter au format HTML
+EXPORT\ IMDI\ TO\ HTML=IMDI nach HTML exportieren
 
-OPEN\ IMDI\ FORMATTED=Ouvrir IMDI __Format\u00c3\u00a9
+OPEN\ IMDI\ FORMATTED=Formatiertes IMDI \u00f6ffnen
 
-VIEW\ IMDI\ FORMATTED=Voir IMDI __Format\u00c3\u00a9
+VIEW\ IMDI\ FORMATTED=Formatiertes IMDI ansehen
 
-VIEW\ XML=Voir le XML
+VIEW\ XML=XML Ansehen
 
-OPEN\ IN\ EXTERNAL\ APPLICATION=Ouvrez dans une application externe
+OPEN\ IN\ EXTERNAL\ APPLICATION=In externer Anwendung \u00f6ffnen
 
-OVERRIDE\ TYPE\ CHECKER\ DECISION=Remplacer D\u00c3\u00a9cision Type Checker
+OVERRIDE\ TYPE\ CHECKER\ DECISION=Ersetzen von Type Checker Entscheidung
 
-SAVE\ CHANGES\ TO\ DISK=Enregistrer les modifications au disque
+SAVE\ CHANGES\ TO\ DISK=\u00c4nderungen auf Festplatte speichern
 
-SELECT\ RESOURCE\ FILE=S\u00c3\u00a9lectionnez Fichier de ressources
+SELECT\ RESOURCE\ FILE=Daten-Datei ausw\u00e4hlen
 
-BROWSE\ FOR\ RESOURCE\ FILE=Parcourir pour le fichier de ressources
-ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)="\u00c3\u00a9 propos de remplacer toutes les valeurs dans la colonne \ \ ""{0} \ \"" \ \ Nwith la valeur \ \ ""{1} \ \"" \ \ n (valeurs> <Plusieurs ne sera pas affectedness)"
-LOGOUT\ ERROR=D\u00c3\u00a9connexion d\'erreur
+BROWSE\ FOR\ RESOURCE\ FILE=Datenordner durchsuchen
+ABOUT\ TO\ REPLACE\ ALL\ VALUES\ IN\ COLUMN\ {0}\ WITH\ THE\ VALUE\ {1}(<MULTIPLE\ VALUES>\ WILL\ NOT\ BE\ AFFECTED)="Sie sind dabei alle Werte in der Spalte zu ersetzen\ \ ""{0} \ \"" \ \ mit dem Wert \ \ ""{1} \ \"" \ \ n (> <Mehrere Werte werden nicht ver\u00e4ndert)"
+LOGOUT\ ERROR=Fehler beim Ausloggen
