--- a/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
+++ b/src/main/resources/nl/mpi/arbil/localisation/Widgets_de.properties
@@ -2,42 +2,42 @@
 # and open the template in the editor.
 
 CLARIN\ INSTANCE=Instance Clarin
-CATALOGUE=Catalogue
-SESSION=Session
-\ (LOADING)=\ (chargement)
-OTHER=Autres
-DELETE\ NODE=Supprimer Node
-ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Erreur suppression, consultez le fichier journal via le menu d\'aide pour plus d\'informations.
-FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Impossible de charger {0} emplacements. Consultez le journal des erreurs pour plus de d\u00e9tails.
-ERROR=Erreur
-COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=Impossible de trouver ou de charger endroits. Ajout d\'emplacements par d\u00e9faut.
-FAVOURITES=Favoris
-WORKING\ DIRECTORIES=R\u00e9pertoires de Travail
-REMOTE\ CORPUS=Distance corpus
-LOCAL\ CORPUS=Local corpus
-WARNING=AVERTISSEMENT
-FILES=Fichiers
-THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?",\ "SAVE\ TO\ DISK?=Cette action permettra d\'\u00e9conomiser toutes les modifications en attente sur {0} disque. Continuer?
-REMEMBER\ MY\ CHOICE=Se souvenir de mon choix
-\ FORMATTED=\ format\u00e9
-VIEW\ IMDI\ XML=Voir IMDI XML
-THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=Le noeud doit \u00eatre enregistr\u00e9 en premier.\nEnregistrer maintenant?
-FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ {0}=Impossible d\'ouvrir l\'emplacement distant: {0}
-OPEN\ IN\ EXTERNAL\ APPLICATION=Ouvrir dans une application externe
-FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=Impossible d\'ouvrir le fichier. S\'il vous pla\u00eet v\u00e9rifiez qu\'il est accessible et dispose d\'une application qui lui est associ\u00e9e. \n\nVoulez-vous ouvrir le r\u00e9pertoire parent?
-FAILED\ TO\ FIND\ THE\ FILE\:\ {0}=Impossible de trouver le fichier: {0}
-SELECTION=S\u00e9lection
-DIRECTORIES=REPERTOIRES
-METADATA\ FILES=Fichiers de m\u00e9tadonn\u00e9es
-THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=Le r\u00e9pertoire d\'exportation s\u00e9lectionn\u00e9 n\'est pas vide. Lors de l\'exportation, vous aurez l\'\nchoice soit de remplacer ou de cr\u00e9er des doubles de tous les fichiers pr\u00e9sents. \nVoulez-vous continuer?
-THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=Le r\u00e9pertoire d\'export \n \\"{0} \\" \ndoes n\'existent pas. \nVeuillez s\u00e9lectionner ou cr\u00e9er un r\u00e9pertoire.
-\ DESTINATION\ DIRECTORY=\ R\u00e9pertoire de destination
-SAVE\ CHANGES=Sauvegarder les changements
-THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Il ya des modifications non enregistr\u00e9es. \nEnregistrer maintenant?
-ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Erreur lors de montrer licence. Consultez le journal des erreurs pour plus de d\u00e9tails.
-LICENSE=License
-ABOUT\ {0}=A propos de {0}
-CLOSE=Fermer
-DISPLAY\ LICENSE=Affichage de licence
+CATALOGUE=Katalog
+SESSION=Sitzung
+\ (LOADING)=\ (wird geladen)
+OTHER=Anderes
+DELETE\ NODE=Knotenpunkt l\u00f6schen
+ERROR\ DELETING\ NODE,\ CHECK\ THE\ LOG\ FILE\ VIA\ THE\ HELP\ MENU\ FOR\ MORE\ INFORMATION.=Fehler Knotenpunkt l\u00f6schen, F\u00fcr mehr Informationen kontrollieren Sie die Logdatei mit dem Hilfemenu.
+FAILED\ TO\ LOAD\ {0}\ LOCATIONS.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Laden nicht m\u00f6glich von {0} Speicherort. Siehe Fehlerprotokoll f\u00fcr Details.
+ERROR=Fehler
+COULD\ NOT\ FIND\ OR\ LOAD\ LOCATIONS.\ ADDING\ DEFAULT\ LOCATIONS.=Nicht m\u00f6glich Speicherort zu finden oder zu laden. Default Speicherort hinzuf\u00fcgen.
+FAVOURITES=Favoriten
+WORKING\ DIRECTORIES=Arbeitsverzeichnis
+REMOTE\ CORPUS= Online Corpus
+LOCAL\ CORPUS=Lokales Corpus
+WARNING=Warnung
+FILES=Dateien
+THIS\ ACTION\ WILL\ SAVE\ ALL\ PENDING\ CHANGES\ ON\ {0}\ TO\ DISK.\ CONTINUE?",\ "SAVE\ TO\ DISK?=Diese Option wird alle durchgef\u00fchrten Ver\u00e4nderungen speichern auf {0} der Festplatte. Fortsetzen?
+REMEMBER\ MY\ CHOICE=Meine Auswahl merken
+\ FORMATTED=\ formatiert
+VIEW\ IMDI\ XML= IMDI XML Ansehen
+THE\ NODE\ MUST\ BE\ SAVED\ FIRST.SAVE\ NOW?=Der Knotenpunkt muss zuerst gespeichert werden.\ Jetzt speichern?
+FAILED\ TO\ OPEN\ THE\ REMOTE\ LOCATION\:\ \u00d6ffnen des {0}'emplacement distant: {0} nicht m\u00f6glich
+OPEN\ IN\ EXTERNAL\ APPLICATION=In externer Anwendung \u00f6ffnen
+FAILED\ TO\ OPEN\ THE\ FILE.\ PLEASE\ CHECK\ THAT\ IT\ IS\ ACCESSIBLE\ AND\ HAS\ AN\ APPLICATION\ ASSOCIATED\ WITH\ IT.DO\ YOU\ WANT\ TO\ OPEN\ THE\ PARENT\ DIRECTORY?=Fehler beim \u00d6ffnen der Datei. Kontrollieren Sie, ob sie auf die Datei zugreifen k\u00f6nnen und ob sie in einer Anwendung verwendet wird. Wollen Sie die Eltern-datei \u00f6ffnen?
+FAILED\ TO\ FIND\ THE\ FILE\:\ {0}=Finden der Datei nicht m\u00f6glich {0}
+SELECTION=Auswahl
+DIRECTORIES=Verzeichnisse
+METADATA\ FILES=Metadata Datei
+THE\ SELECTED\ EXPORT\ DIRECTORY\ IS\ NOT\ EMPTY.\ ON\ EXPORT,\ YOU\ WILL\ HAVE\ THE\ CHOICE\ TO\ EITHER\ OVERRIDE\ OR\ CREATE\ DUPLICATES\ OF\ ANY\ PRESENT\ FILES.DO\ YOU\ WANT\ TO\ CONTINUE?=Das ausgew\u00e4hlte Verzeichnis ist nicht leer. Beim Export haben Sie die Wahl Dateien zu \u00fcberschreiben oder Duplikate der enthaltenen Dateien zu erstellen. M\u00f6chten Sie fortfahren? 
+THE\ EXPORT\ DIRECTORY\ {0}\ DOES\ NOT\ EXIST.PLEASE\ SELECT\ OR\ CREATE\ A\ DIRECTORY.=Das Export-Verzeichnis \n \\"{0} \\" \existiert nicht. \Bitte ein Verzeichnis ausw\u00e4hlen oder erstellen.
+\ DESTINATION\ DIRECTORY=\ Zielverzeichnis.
+SAVE\ CHANGES=\u00c4nderungen speichern
+THERE\ ARE\ UNSAVED\ CHANGES.SAVE\ NOW?=Es wurden nicht gespeicherte \u00c4nderungen vorgenommen. \Jetzt speichern?
+ERROR\ WHILE\ TRYING\ TO\ SHOW\ LICENSE.\ SEE\ ERROR\ LOG\ FOR\ DETAILS.=Fehler beim Anzeigen der Lizens. Bitte Fehlerprotoll \u00fcberpr\u00fcfen f\u00fcr mehr Details.
+LICENSE=Lizens
+ABOUT\ {0}=\u00dcber {0}
+CLOSE=Schlie\u00dfen
+DISPLAY\ LICENSE=Lizens anzeigen
 ABOUTBOXTEXT=Constructeur d\'archives \nA outil local pour organiser les donn\u00e9es linguistiques. \nMax Planck de psycholinguistique \n\nApplication initialement con\u00e7u et d\u00e9velopp\u00e9 par {0} \n\'entretien nCurrent et les extensions par {1} \nArbil utilise \u00e9galement composants de l\'API IMDI \u200b\u200bet Lamus type Checker \n \nVersion: {2} {3} {4} \ \ {5} n \ \ Date nCompile:.. {6} \n \ \ version nJava: { 7} \ nVendor \: {8} \nJVM: {9} {10} \ system nOperating \: {11} {12} ({13}) \n \nCopyright (C) {14} Institut Max Planck de psycholinguistique \n \nArbil a \u00e9t\u00e9 autoris\u00e9 en vertu de la GNU General Public License 2. \nCliquez sur le bouton ci-dessous pour voir la version compl\u00e8te de cette licence.
-SAVE\ TO\ DISK?=Enregistrer sur le disque?
+SAVE\ TO\ DISK?=Auf Festplatte speichern?
